found and managed bug in list: playersArr  update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <button class="remove-all-players"><i class="fa-solid fa-trash-can"></i> Remove all players</button>
             </div>
 
+
             <div class="players-container">
+
 
                 <!-- <div class="player">
                     <p class="name" id="0">Harry</p>
@@ -45,8 +47,14 @@
                     </button>
                 </div> -->
 
+                <div class="not-even-error">
+                    <p>Amount of players is not even!</p>
+                    <button class="close-btn">Close</button>
+                </div>
 
             </div>
+
+
 
         </div>
 
