graphic reprezentation, fixed sorting bug, again btn

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                     <p>Amount of players is not even!</p>
                     <button class="close-btn">Close</button>
                 </div>
+                <div class="try-again">
+                    <button class="again-btn">Try again!</button>
+                </div>
 
             </div>
 
@@ -68,8 +71,9 @@
                         <p class="damage-team1 icon-fire"> : </p>
                         <p class="speed-team1 icon-speedometer"> : </p>
                     </h3>
-                    <ul class="ul1">TEAM MEMBERS</ul>
-                    <li>Ala</li>
+                    <h4>TEAM MEMBERS:</h4>
+                    <ul class="ul1"></ul>
+                    <!-- <li>Ala</li>
                     <li>Ola</li>
                     <li>Ola</li>
                     <li>Ola</li>
@@ -78,7 +82,7 @@
                     <li>Ola</li>
                     <li>Ola</li>
                     <li>Ola</li>
-                    <li>Ola</li>
+                    <li>Ola</li> -->
 
                 </div>
             </div>
@@ -90,8 +94,9 @@
                         <p class="damage-team2 icon-fire"> : </p>
                         <p class="speed-team2 icon-speedometer"> : </p>
                     </h3>
-                    <ul class="ul2">TEAM MEMBERS</ul>
-                    <li>Ala</li>
+                    <h4>TEAM MEMBERS:</h4>
+                    <ul class="ul2"></ul>
+                    <!-- <li>Ala</li>
                     <li>Ola</li>
                     <li>Ola</li>
                     <li>Ola</li>
@@ -100,7 +105,7 @@
                     <li>Ola</li>
                     <li>Ola</li>
                     <li>Ola</li>
-                    <li>Ola</li>
+                    <li>Ola</li> -->
 
 
                 </div>
