final css styles added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="light">
     <div class="app-wrapper">
-        <h1>Create your dream team</h1>
+        <h1><img src="assets/img/h1.png" alt="find path of the force"></h1>
 
         <div class="players-wrapper">
 
@@ -52,7 +52,7 @@
                     <button class="close-btn">Close</button>
                 </div>
                 <div class="try-again">
-                    <button class="again-btn">Try again!</button>
+                    <button class="again-btn icon-rocket"> Try again!</button>
                 </div>
 
             </div>
@@ -64,7 +64,7 @@
         <div class="teams-wrapper">
 
             <div class="team1">
-                <h2>Team 1</h2>
+                <h2><i class="fa-solid fa-jedi"></i> Team Jedi</h2>
                 <div class="selected-players1">
                     <h3>Team statistics :
                         <p class="skill-team1  icon-magic-wand"> : </p>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="team2">
-                <h2>Team 2</h2>
+                <h2><i class="fa-brands fa-sith"></i> Team Sith</h2>
                 <div class="selected-players2">
                     <h3>Team statistics :
                         <p class="skill-team2  icon-magic-wand"> : </p>
