final version before debugging

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <button class="sort-players"><i class="fa-solid fa-compass"></i> Find your team</button>
                 <button class="remove-all-players"><i class="fa-solid fa-trash-can"></i> Remove all players</button>
             </div>
-
+            <div class="try-again">
+                <button class="again-btn icon-rocket"> Try again!</button>
+            </div>
 
             <div class="players-container">
 
@@ -46,16 +48,15 @@
                     <button class="remove-player"><i class="fa-solid fa-circle-xmark"></i>
                     </button>
                 </div> -->
-
                 <div class="not-even-error">
                     <p>Amount of players is not even!</p>
                     <button class="close-btn">Close</button>
                 </div>
-                <div class="try-again">
-                    <button class="again-btn icon-rocket"> Try again!</button>
-                </div>
+
+                <div class="shadow"></div>
 
             </div>
+
 
 
 
