part of media queries ready

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body class="light">
     <div class="app-wrapper">
+
         <h1><img src="assets/img/h1.png" alt="find path of the force"></h1>
 
         <div class="players-wrapper">
@@ -67,7 +68,7 @@
             <div class="team1">
                 <h2><i class="fa-solid fa-jedi"></i> Team Jedi</h2>
                 <div class="selected-players1">
-                    <h3>Team statistics :
+                    <h3>Team statistics 
                         <p class="skill-team1  icon-magic-wand"> : </p>
                         <p class="damage-team1 icon-fire"> : </p>
                         <p class="speed-team1 icon-speedometer"> : </p>
@@ -90,7 +91,7 @@
             <div class="team2">
                 <h2><i class="fa-brands fa-sith"></i> Team Sith</h2>
                 <div class="selected-players2">
-                    <h3>Team statistics :
+                    <h3>Team statistics 
                         <p class="skill-team2  icon-magic-wand"> : </p>
                         <p class="damage-team2 icon-fire"> : </p>
                         <p class="speed-team2 icon-speedometer"> : </p>
