--- a/index.html
+++ b/index.html
@@ -75,16 +75,7 @@
                     </h3>
                     <h4>TEAM MEMBERS:</h4>
                     <ul class="ul1"></ul>
-                    <!-- <li>Ala</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ala</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li> -->
+                    <!-- <li>Player's Name</li> -->
 
                 </div>
             </div>
@@ -98,18 +89,7 @@
                     </h3>
                     <h4>TEAM MEMBERS:</h4>
                     <ul class="ul2"></ul>
-                    <!-- <li>Ala</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ala</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li>
-                    <li>Ola</li> -->
-
-
+                    <!-- <li>Player's name</li>> -->
                 </div>
             </div>
         </div>
