--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Creator</title>
+    <link rel="shortcut icon" type="image/png" href="assets/img/droid-favicon.png">
     <link
         href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat:200,400,700&display=swap&subset=latin-ext"
         rel="stylesheet">
